vendor/structopt-0.3.21/tests/ui/raw.stderr
error: `#[structopt(raw(...))` attributes are removed in structopt 0.3, they are replaced with raw methods

  = help: if you meant to call `clap::Arg::raw()` method you should use bool literal, like `raw(true)` or `raw(false)`
  = note: if you need to call `clap::Arg/App::case_insensitive` method you can do it like this: #[structopt(case_insensitive = true)]

  --> $DIR/raw.rs:13:17
   |
13 |     #[structopt(raw(case_insensitive = "true"))]
   |                 ^^^

error: `#[structopt(raw(...))` attributes are removed in structopt 0.3, they are replaced with raw methods

  = help: if you meant to call `clap::Arg::raw()` method you should use bool literal, like `raw(true)` or `raw(false)`
  = note: if you need to call `clap::Arg/App::requires_if` method you can do it like this: #[structopt(requires_if("one", "two"))]

  --> $DIR/raw.rs:19:17
   |
19 |     #[structopt(raw(requires_if = r#""one", "two""#))]
   |                 ^^^
